[project]
name = "universal-data-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "sobz2019",email = "sobz87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash (>=3.2.0,<4.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "requests (>=2.32.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false